0.7p0   - Added support for Pololu USB 16-Servo controller
        - Replaced --enable-ft639 and --enable-phidget with more generic
	  --enable-serial and --enable-usb
        - Added LimitTransformer

0.6p3dev1 Replaced jUSB (http://jusb.sf.net) with javax.usb
          (http://javax-usb.sf.net), to get a feeling for it. Seems to work
          fine so far.

0.6p2-3 - Changed Ant invocation from "Ant as Java class" to "Ant as a shell
	  script" - allows to work with Ant 1.6.1, which is not yet packaged
	  as RPM.

0.6p2-2 - Fixed a silly requirement to have a specific JDK installed;
	- Added a warning if the Java binary wasn't found at runtime.

0.6p2	- Stability bugfixes. Hopefully, 'Disconnected mode' is really
	  supported for QuadServo this time.
	- Allowed devices to be disconnected at driver startup (if exact
	  hardware type is known)
	- Run script name changed again to servomaster_console (to allow a
	  polite RPM layout)
	- Changed test script name to servomaster_sync_check
	- Changed deployment layout to conform to RPM guidelines better

0.6p1	- Firmware update for AdvancedServo, fixed the USB timeout problem

0.6p0	- 'Disconnected mode' properly supported for QuadServo

0.5p0	- Added support for autoconf 2.53 and automake 1.6
	- Removed support for autoconf 2.13 - it was not possible to keep
	  both 2.13 and 2.53 code together without running into
	  complications
	- Updated the firmware code for PhidgetAdvancedServo
	- Run script name changed from 'ft_view' (which was originally
	  created for FT639) to more proper 'console'
	- Multiple FT639 metadata bugfixes

0.4p2   - Added support for PhidgetAdvancedServo
	- Support for different Phidgets made generic, the only part that
	  needs to be changed now when new Phidget is introduced is the
	  ProtocolHandler and meta objects
	- Changed the metadata model. From now on, it is possible to
	  discover the controller and servo abstraction capabilities in a